<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/firebase_logo_vertical" />

    <TextView
        android:id="@+id/slide_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_image"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/slide_titre"
        android:textSize="30sp"
        android:textColor="@color/pointsBlanc"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slide_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/pointsTransparent"
        android:text="@string/slide_desc"
        android:layout_below="@+id/slide_titre"
        android:textAlignment="center"
        android:textSize="14sp" />
</RelativeLayout>