<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/connexion_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/connexion_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- DÉBUT __ Écran de chargement -->
    <LinearLayout
        android:id="@+id/connexion_chargement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:progressTint="@color/colorPrimary"
            android:indeterminateBehavior="cycle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Chargement"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    <!-- FIN __ Écran de chargement -->

    <ImageView
        android:id="@+id/connexion_fond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_b2w_t"/>

    <TextView
        android:id="@+id/connexion_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnConnexion"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/connexion_mail_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connexion_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@id/connexion_mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/connexion_mdp_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/connexion_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connexion_hint_mail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/connexion_mdp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/connexion_mdp_oublie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/connexion_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connexion_hint_mdp"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

<!--
    <CheckBox
        android:id="@+id/connexion_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:text="@string/rester_connecte"
        app:layout_constraintBottom_toTopOf="@+id/connexion_mdp_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />
-->
    <TextView
        android:id="@+id/connexion_nouveau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/compte_inexistant"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/connexion_mdp_oublie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/connexion_mdp_oublie"
        app:layout_constraintBottom_toTopOf="@+id/connexion_bouton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/connexion_bouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/valider"
        app:layout_constraintBottom_toTopOf="@+id/connexion_nouveau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>