<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/profil_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageProfilEdition">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profil_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:titleTextColor="#FFF"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- DÉbut __ Écran de chargement -->
    <LinearLayout
        android:id="@+id/profil_chargement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:progressTint="@color/colorPrimary"
            android:indeterminateBehavior="cycle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mise_a_jour"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    <!-- FIN __ Écran de chargement -->

    <ImageView
        android:id="@+id/profil_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil_toolbar"
        app:srcCompat="@drawable/ic_sharp_account_circle_24px"
        tools:layout_editor_absoluteY="35dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/profil_nom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/profil_image">

        <EditText
            android:id="@+id/profil_nom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nom_user"
            android:inputType="textPersonName"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/profil_prenom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profil_nom_layout">

        <EditText
            android:id="@+id/profil_prenom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prenom_util"
            android:inputType="textPersonName"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/profil_nomUtil_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profil_prenom_layout">

        <EditText
            android:id="@+id/profil_nomUtil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nom_util"
            android:inputType="textPersonName"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/profil_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/enregistrer"/>

</android.support.constraint.ConstraintLayout>