<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:id="@+id/article_layout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/article_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/article_entete"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_toolbar">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/icon_2" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/article_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/article_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre_article"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/article_sous_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sous_titre_article"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="175dp" />

            <TextView
                android:id="@+id/article_auteur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/auteur_article"
                android:textAlignment="center"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/article_texte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/texte_carte_2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/article_limitation"
        android:layout_width="443dp"
        android:layout_height="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/article_texte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_entete"
        app:layout_constraintVertical_bias="0.882"
        android:contentDescription="@string/image"
        app:srcCompat="@color/colorPrimary" />



</android.support.constraint.ConstraintLayout>